tests/grammar/valid/v1_multi_declaration.c
#include <stdint.h>
#include <stdio.h>

int32_t a = 10;
int64_t b = 20;