tests/grammar/invalid/v2_invalid_identifier.c
#include <stdint.h>
#include <stdio.h>

int64_t 10a = 20